--- a/TaskManager/src/main/resources/templates/create.html
+++ b/TaskManager/src/main/resources/templates/create.html
@@ -6,22 +6,16 @@
 </head>
 <body>
 <h1>Create manager</h1>
-<form action="/task/create" method="post">
-    <div>
-        <p>Title</p>
-        <label for="title"></label>
-        <input type="text" id="title" name="title" th:value="${task.title}">
-    </div>
-    <div>
-        <p>Description</p>
-        <label for="description"></label>
-        <textarea id="description" name="description" th:text="${task.description}"></textarea>
-    </div>
-    <div>
-        <p>Priority</p>
-        <label for="priority"></label>
-        <input type="number" id="priority" name="priority" th:value="${task.priority}">
-    </div>
+<form th:object="${task}" th:action="${'/task/create'}" method="post">
+    <label>Title:</label>
+    <input type="text" th:field="*{title}">
+    <br>
+    <label>Description:</label>
+    <input type="text" th:field="*{description}">
+    <br>
+    <label>Priority:</label>
+    <input type="text" th:field="*{priority}">
+    <br>
     <button type="submit">Save</button>
 </form>
 </body>
