--- a/TaskManager/src/main/resources/templates/edit.html
+++ b/TaskManager/src/main/resources/templates/edit.html
@@ -4,26 +4,19 @@
     <meta charset="UTF-8">
     <title>Edit manager</title>
 </head>
-<body>
-<h1>Edit manager</h1>
-<form action="/task/edit" method="post">
-    <input type="hidden" name="id" th:value="${task.id}">
-    <div>
-        <p>Title</p>
-        <label for="title"></label>
-        <input type="text" id="title" name="title" required th:value="${task.title}">
-    </div>
-    <div>
-        <p>Description</p>
-        <label for="description"></label>
-        <textarea id="description" name="description" required th:text="${task.description}"></textarea>
-    </div>
-    <div>
-        <p>Priority</p>
-        <label for="priority"></label>
-        <input type="number" id="priority" name="priority" required th:value="${task.priority}">
-    </div>
-    <button type="submit">Save</button>
-</form>
-</body>
+    <h1>Edit manager</h1>
+    <form th:object="${task}" th:action="${'/task/edit/' + task.id}" method="post">
+        <input type="hidden" th:field="*{id}">
+        <label>Title:</label>
+        <input type="text" th:field="*{title}">
+        <br>
+        <label>Description:</label>
+        <input type="text" th:field="*{description}">
+        <br>
+        <label>Priority:</label>
+        <input type="text" th:field="*{priority}">
+        <br>
+        <button type="submit">Save</button>
+    </form>
+    </body>
 </html>
